# sol-simple-swap

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  gatsby-config.ts  gatsby-node.ts  package.json  tsconfig.json
client/: .env  accounts.ts  main.ts  solana.ts  types.ts
client/lib/: accounts.ts  const.ts  solana.ts
client/pages/: admin.tsx  index.tsx  swap.tsx
program/src/: error.rs  instruction.rs  processor.rs  state.rs
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
