[package]
name = "mov_swap"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.14.7"
spl-token = {version = "3.5", features = ["no-entrypoint"]}
borsh = "0.9.3"
borsh-derive = "0.9.1"
thiserror = "1.0.24"

[lib]
name = "mov_swap"
crate-type = ["cdylib", "lib"]
